<resources>
    <string name="app_name">Android_8_Lab_05</string>
    <string name="android_pizza_shop">Android Pizza Shop</string>
    <string name="todo">TODO</string>
    <string name="choose_your_pizza_size">Choose Your Pizza Size</string>
    <string name="small_5">Small ($ 5)</string>
    <string name="large_9">Large ($ 9)</string>
    <string name="medium_7">Medium ($ 7)</string>
    <string name="choose_your_toppings">Choose Your Toppings:</string>
    <string name="onions_1">Onions ($ 1)</string>
    <string name="olives_2">Olives ($ 2)</string>
    <string name="tomatoes_3">Tomatoes ($ 3)</string>
    <string name="place_your_order">Place Your Order</string>
</resources>