<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="592dp"
        android:text="@string/android_pizza_shop"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="205dp"
        android:layout_height="141dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:layout_marginBottom="24dp"
        android:text="@string/choose_your_pizza_size"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="383dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="27dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/smallPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_5"
            android:onClick="onPlaceOrderButtonClicked"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="250dp" />

        <RadioButton
            android:id="@+id/mediumPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_7"
            android:onClick="onPlaceOrderButtonClicked"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="250dp" />

        <RadioButton
            android:id="@+id/largePizza"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/large_9"
            android:onClick="onPlaceOrderButtonClicked"
            tools:layout_editor_absoluteX="259dp"
            tools:layout_editor_absoluteY="250dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="211dp"
        android:layout_marginRight="211dp"
        android:layout_marginBottom="32dp"
        android:text="@string/choose_your_toppings"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/OnionsCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/OnionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        android:layout_marginBottom="16dp"
        android:text="@string/onions_1"
        app:layout_constraintBottom_toTopOf="@+id/OlivesCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView3"
        android:onClick="onPlaceOrderButtonClicked"/>

    <CheckBox
        android:id="@+id/OlivesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="301dp"
        android:layout_marginRight="301dp"
        android:layout_marginBottom="16dp"
        android:text="@string/olives_2"
        app:layout_constraintBottom_toTopOf="@+id/TomatoesCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OnionsCheckBox"
        android:onClick="onPlaceOrderButtonClicked"/>

    <CheckBox
        android:id="@+id/TomatoesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="267dp"
        android:layout_marginRight="267dp"
        android:layout_marginBottom="180dp"
        android:text="@string/tomatoes_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OlivesCheckBox"
        app:layout_constraintVertical_bias="0.131"
        android:onClick="onPlaceOrderButtonClicked"/>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="16dp"
        android:text="@string/place_your_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TomatoesCheckBox"
        android:onClick="onPlaceOrderButtonClicked"/>

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderButton" />


</androidx.constraintlayout.widget.ConstraintLayout>